$1973 MatchingLogins - cut off letter ends FIX

--- a/partials/TwofasNotification/TwofasNotification.scss
+++ b/partials/TwofasNotification/TwofasNotification.scss
@@ -886,7 +886,7 @@
               margin-bottom: -2px !important;
               max-width: 100% !important;
               overflow: hidden !important;
-              padding-bottom: 2px !important;
+              padding-bottom: 3px !important;
               text-overflow: ellipsis !important;
   
               &:first-of-type,
